--- a/src/components/componantStyle.css
+++ b/src/components/componantStyle.css
@@ -1,4 +1,5 @@
 .navbar {
+    background: rgb(30, 30, 30);
     height: 5rem;
     width: 100vw;
     max-width: 80rem;
@@ -62,10 +63,10 @@
 .background {
     position: absolute;
     top: 0;
-    right: -5rem;
+    right: -3rem;
     z-index: -1;
     object-fit: cover;
-    height: 100vh;
+    height: 85vh;
 }
 
 .introContent {
@@ -106,4 +107,58 @@
     object-fit: cover;
     margin: 0 0.25rem;
     height: 1rem;
+}
+
+#skills {
+    overflow: hidden;
+    width: 100vw;
+    max-width: 65rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.skillTitle {
+    font-size: 3rem;
+    font-weight: 600;
+    padding-top: 3rem;
+    margin-bottom: 1.5rem;
+}
+
+.skillDiscription {
+    font-weight: 400;
+    font-size: 1rem;
+    max-width: 51rem;
+    padding: 0 2rem;
+}
+
+.skillBars {
+    margin: 1.5rem;
+    width: 100vw;
+    max-width: 80%;
+    text-align: left;
+}
+
+.skillBar {
+    display: flex;
+    margin: 1rem;
+    padding: 1.5rem 2rem;
+    border-radius: 0.5rem;
+    background: rgb(50, 50, 50);
+}
+
+.skillBarImg {
+    object-fit: cover;
+    height: 3rem;
+    width: 3rem;
+    margin-right: 2rem;
+}
+
+.skillBarText>p {
+    font-size: 0.9rem;
+    font-weight: 200;
+
 }
